flux/apps/anibridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anibridge
  namespace: multimedia-factory
spec:
  selector:
    app: anibridge
  ports:
    - protocol: TCP
      port: 4848
      targetPort: 4848
  type: ClusterIP
